Add jvm-opts --illegal-access=debug
Wrt building lein uberjar and reflection warnings, but this does not
give more info.